Modified the website so as to integrate HTTP load balancing with the Docker Swarm service discovery

--- a/websites/010.http.api.kernoslabs.com.conf
+++ b/websites/010.http.api.kernoslabs.com.conf
@@ -1,13 +1,11 @@
-upstream api {
-    server webapp;
-}
-
 server {
     listen 80;
     server_name api.kernoslabs.com;
     
     location / {
-        proxy_pass http://api;
+        resolver 127.0.0.11 ipv6=off;
+        set $upstream apikernos_webapp:8080;
+        proxy_pass http://$upstream;
     }
 
     include websites/request-denied.include;
